Chat client bug-fix